# rust-axum-sqs

./: Cargo.toml  docker-compose.yaml
migrations/: 20240715195756_initial-migration.sql
src/: main.rs  model.rs  sqs_listener.rs
