[package]
name = "rust-axum-sqs"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.35.0"
axum = {  version = "0.7.5" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = {  version = "0.7.4", features = ["postgres", "macros", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
